ingress-https/demo-nginx-svc-ssl.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-svc-ssl
spec:
  selector:
    for: ssl
  ports:
  - port: 80
    targetPort: 80
